syntax = "proto3";

package db;

option go_package = "./proto;db";

message GetUserRequest {
  string auth0_id = 1;
  string email = 2;
}

message GetUserResponse {
  bool success = 1;
  string message = 2;
}

message UploadVideoRequest {
  string bucket = 1;
  string object_key = 2;
  string exercise_name = 3;
  string auth0_id = 4;
}

message UploadVideoResponse {
  bool success = 1;
  string message = 2;
  int64 video_id = 3;
}

message GetUserVideosByExerciseRequest {
  string auth0_id = 1;
  string exercise_name = 2;
}

message VideoInfo {
  string bucket = 1;
  string object_key = 2;
  string exercise_name = 3;
  string auth0_id = 4;
  string created_at = 5;
  int64 id = 6;
}

message VideoAnalysisRequest {
  int64 video_id = 1;
  string type = 2;
  string bucket = 3;
  string object_key = 4;
}

message SaveAnalysisResponse {
  bool success = 1;
  string message = 2;
}

message GetUserVideosByExerciseResponse {
  repeated VideoInfo videos = 1;
  bool success = 2;
  string message = 3;
}

message CheckOwnershipRequest {
  string auth0_id = 1;
  int64 video_id = 2;
}

message CheckOwnershipResponse {
  bool owned = 1;
  string message = 2;
  string object_key = 3;
  string bucket = 4;
}

message VideoAnalysis {
  int64 video_id = 1;
  string type = 2;
  string bucket = 3;
  string object_key = 4;
  int64 id = 5;
}

message GetVideoAnalysisResponse {
  repeated VideoAnalysis analyses = 1;
  bool success = 2;
  string message = 3;
}

message GetVideoAnalysisRequest {
  int64 video_id = 1;
}

message SaveAnalysisJSONRequest {
  int64 video_id = 1;
  string payload_json = 2;
}

message SaveAnalysisJSONResponse {
  bool success = 1;
  string message = 2;
  int64 analysis_id = 3;
}

message GetAnalysisJSONRequest {
  int64 video_id = 1;
}

message AnalysisJSON {
  int64 id = 1;
  int64 video_id = 2;
  string payload_json = 3;
  string created_at = 4;
}

message GetAnalysisJSONResponse {
  AnalysisJSON analysis = 1;
  bool success = 2;
  string message = 3;
}

service DBService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc SaveUploadedVideo(UploadVideoRequest) returns (UploadVideoResponse);
  rpc GetUserVideosByExercise(GetUserVideosByExerciseRequest) returns (GetUserVideosByExerciseResponse);
  rpc SaveAnalysis(VideoAnalysisRequest) returns (SaveAnalysisResponse);
  rpc CheckOwnership(CheckOwnershipRequest) returns (CheckOwnershipResponse);
  rpc GetVideoAnalysis(GetVideoAnalysisRequest) returns (GetVideoAnalysisResponse);
  rpc SaveAnalysisJSON(SaveAnalysisJSONRequest) returns (SaveAnalysisJSONResponse);
  rpc GetAnalysisJSON(GetAnalysisJSONRequest) returns (GetAnalysisJSONResponse);
}
